--- a/HTML/index.css
+++ b/HTML/index.css
@@ -1,4 +1,7 @@
 div {
-    background-color: blue !important;
+    background-color: beige;
+    font-size: 40px;
+    width: 250px;
+    height: 150px;
 }
 /* !important 적용시 모든 것을 무시하고 최 우선 순위로 반영됨 */
