[css] 1-10 변수로 특정 옵션의 값을 저장하는 경우

--- a/HTML/anime.css
+++ b/HTML/anime.css
@@ -1,6 +1,14 @@
+:root {
+    --main-color: rgb(147, 20, 147);
+}
+
 div {
     width: 100px;
     height: 100px;
     background-color: rgb(98, 220, 147);
+}
 
+/*변수로 컬러의 값을 지정하는 경우*/
+div > button {
+    background-color: var(--main-color);
 }
