--- a/HTML/anime.css
+++ b/HTML/anime.css
@@ -8,7 +8,15 @@ div {
     height: 100px;
     background-color: rgb(98, 220, 147);
 }
-
+.box {
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+}
+.box:hover {
+    width: 100px;
+    height: 100px;
+}
 /*변수로 컬러의 값을 지정하는 경우*/
 div > button {
     background-color: var(--main-color);
