--- a/HTML/anime.css
+++ b/HTML/anime.css
@@ -12,6 +12,7 @@ div {
     width: 50px;
     height: 50px;
     border: 1px solid black;
+    transition: all 1s;
 }
 .box:hover {
     width: 100px;
