[css] 1-10 anime 옵션을 주는 경우 다음과 같이 적용할 수 있다.

--- a/HTML/anime.css
+++ b/HTML/anime.css
@@ -12,11 +12,14 @@ div {
     width: 50px;
     height: 50px;
     border: 1px solid black;
-    transition: all 1s;
+    transition: all 0.3s ease-in-out;
 }
 .box:hover {
-    width: 100px;
-    height: 100px;
+    /*transform: scale(2);*/
+    /*내가 위치한 기준으로 모든것이 두배가된다.*/
+    /*transform: translate(50px, 0);*/
+    /*이동시키는 방법*/
+    transform: rotate(90deg) scale(0.5);
 }
 /*변수로 컬러의 값을 지정하는 경우*/
 div > button {
