--- a/HTML/anime.css
+++ b/HTML/anime.css
@@ -19,9 +19,28 @@ div {
     /*내가 위치한 기준으로 모든것이 두배가된다.*/
     /*transform: translate(50px, 0);*/
     /*이동시키는 방법*/
-    transform: rotate(90deg) scale(0.5);
+    /*transform: rotate(90deg) scale(0.5);*/
+    animation: 1s awesome;
 }
 /*변수로 컬러의 값을 지정하는 경우*/
 div > button {
     background-color: var(--main-color);
+}
+
+/*#1 특정 애니메이션을 만들어야 하는 경우*/
+/*@keyframes awesome {*/
+/*    from {*/
+/*        */
+/*    } to {*/
+/*    */
+/*    }*/
+/*}*/
+@keyframes awesome {
+    0% {
+        transform: translate(0);
+    } 50% {
+        transform: translate(50px);
+    } 100% {
+        transform: translate(50px, 50px);
+    }
 }
