--- a/HTML/anime.css
+++ b/HTML/anime.css
@@ -13,6 +13,7 @@ div {
     height: 50px;
     border: 1px solid black;
     transition: all 0.3s ease-in-out;
+    animation: 1s awesome infinite alternate;
 }
 .box:hover {
     /*transform: scale(2);*/
@@ -20,7 +21,7 @@ div {
     /*transform: translate(50px, 0);*/
     /*이동시키는 방법*/
     /*transform: rotate(90deg) scale(0.5);*/
-    animation: 1s awesome;
+
 }
 /*변수로 컬러의 값을 지정하는 경우*/
 div > button {
@@ -39,8 +40,8 @@ div > button {
     0% {
         transform: translate(0);
     } 50% {
-        transform: translate(50px);
+        transform: translate(50px) rotate(180deg);
     } 100% {
-        transform: translate(50px, 50px);
+        transform: translate(50px, 50px) scale(3);
     }
 }
