--- a/HTML/anime.css
+++ b/HTML/anime.css
@@ -8,6 +8,11 @@ div {
     height: 100px;
     background-color: rgb(98, 220, 147);
 }
+.logo {
+    width: 200px;
+    height: 200px;
+    animation: 1s awesome infinite alternate;
+}
 .box {
     width: 50px;
     height: 50px;
