[css] 1-11 당근 마켓 clone 만들어보기 - icons 갖고 오기 img 사이즈 조정해야 보임

--- a/mainAssignment/header.css
+++ b/mainAssignment/header.css
@@ -3,3 +3,8 @@
     justify-content: space-between;
     padding: 0 10px 0 10px;
 }
+
+.info-bar__icons img {
+    width: 20px;
+    height: 20px;
+}
