[css] 1-11 당근 마켓 clone 만들어보기 - 상단 info-bar 완성

--- a/mainAssignment/header.css
+++ b/mainAssignment/header.css
@@ -4,6 +4,11 @@
     padding: 0 10px 0 10px;
 }
 
+.info-bar__time {
+    font-size: 12px;
+    font-weight: bold;
+}
+
 .info-bar__icons img {
     width: 15px;
     height: 15px;
