--- a/mainAssignment/header.css
+++ b/mainAssignment/header.css
@@ -13,3 +13,38 @@
     width: 15px;
     height: 15px;
 }
+
+.menu-bar {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    padding: 0 10px 0 10px;
+}
+
+.menu-bar__location {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-weight: bold;
+}
+.menu-bar__location-icon {
+    padding-left: 3px;
+    padding-top: 3px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+.menu-bar__location-icon img{
+    width: 15px;
+}
+
+.menu-bar__icons {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.menu-bar__icons img{
+    width: 25px;
+    margin-right: 10px;
+}
