--- a/mainAssignment/header.css
+++ b/mainAssignment/header.css
@@ -1,10 +1,14 @@
 header {
+    margin-top: 10px;
     border-bottom: 1px solid #ededef;
+    padding-bottom: 10px;
 }
 
+/*info-bar*/
 .info-bar {
     display: flex;
     justify-content: space-between;
+    align-content: center;
     padding: 0 10px 0 10px;
 }
 
@@ -18,26 +22,29 @@ header {
     height: 15px;
 }
 
+/*menu-bar*/
 .menu-bar {
     display: flex;
     justify-content: space-between;
     align-content: center;
-    padding: 0 10px 0 10px;
+    margin-top: 10px;
 }
 
 .menu-bar__location {
     display: flex;
+    padding-left: 10px;
     justify-content: center;
     align-content: center;
     font-weight: bold;
 }
+
 .menu-bar__location-icon {
-    padding-left: 3px;
-    padding-top: 3px;
+    /*padding-top: 5px;*/
     display: flex;
     justify-content: center;
     align-content: center;
 }
+
 .menu-bar__location-icon img{
     width: 15px;
 }
@@ -50,5 +57,7 @@ header {
 
 .menu-bar__icons img{
     width: 25px;
-    margin-right: 10px;
 }
+
+
+
