--- a/mainAssignment/css/footer.css
+++ b/mainAssignment/css/footer.css
@@ -5,7 +5,7 @@ footer {
     padding-top: 20px;
     padding-bottom: 30px;
     border-top: 1px solid #eaeaea;
-
+    background-color: white;
 }
 
 .footer-block {
