--- a/mainAssignment/css/main.css
+++ b/mainAssignment/css/main.css
@@ -1,7 +1,13 @@
+main {
+    padding: 30px 20px 30px 20px;
+}
+
 .item-list {
     display: flex;
     justify-content: center;
     align-content: center;
+    border-bottom: 1px solid #ededef;
+    padding: 20px 0 20px 0;
 }
 
 .item-list__img {
@@ -10,10 +16,24 @@
     border: 1px solid rgba(0,0,0,0.1);
     /*rgba에서 마지막 옵션은 투명도를 주기 위함이다.*/
     border-radius: 12px;
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+.item-list__img img{
+    width: 120px;
 }
 
 .item-list__info {
-
+    display: flex;
+    height: 150px;
+    flex-direction: column;
+    justify-content: start;
+    align-content: start;
+}
+.item-list__info div{
+    margin-top: 10px;
 }
 
 .item-list__info-title {
@@ -21,9 +41,10 @@
 }
 
 .item-list__info-meta {
-
+    font-size: smaller;
+    color: rgba(0,0,0,0.3);
 }
 
 .item-list__info-price {
-
+    font-weight: bold;
 }
