[css] 1-11 당근 마켓 clone 만들어보기 - 화면 크기가 커지는 경우 alert 해주는 부분 추가

--- a/mainAssignment/css/style.css
+++ b/mainAssignment/css/style.css
@@ -2,3 +2,24 @@
 @import "header.css";
 @import "main.css";
 @import "footer.css";
+
+.media-info-msg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    opacity: 0;
+}
+
+@media screen and (min-width: 300px) {
+    .media-info-msg {
+        opacity: 1;
+        background-color: red;
+        width: 100vw;
+        height: 100vh;
+    }
+}
