--- a/mainAssignment/css/style.css
+++ b/mainAssignment/css/style.css
@@ -4,7 +4,7 @@
 @import "footer.css";
 
 .media-info-msg {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
