--- a/mainAssignment/css/main.css
+++ b/mainAssignment/css/main.css
@@ -59,4 +59,9 @@ main {
     color: white;
     font-size: 15px;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    cursor: pointer;
+    transition: all 1s ease-in-out;
+}
+.write-btn:hover {
+    background-color: rgba(255,110,0, 0.8);
 }
