--- a/WordleChallenge/CSS/main.css
+++ b/WordleChallenge/CSS/main.css
@@ -1,7 +1,7 @@
 main {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     flex-direction: column;
     padding-top: 20px;
     gap: 5px;
@@ -9,15 +9,15 @@ main {
 .board-row {
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     gap: 5px;
 }
 
 .board-block {
     display: flex;
     justify-content: center;
-    align-content: center;
-    border: 4px solid #a9a9a9;
+    align-items: center;
+    border: 4px solid rgb(226,230,234);
     width: 60px;
     height: 60px;
 }
