--- a/WordleChallenge/CSS/main.css
+++ b/WordleChallenge/CSS/main.css
@@ -20,4 +20,6 @@ main {
     border: 4px solid rgb(226,230,234);
     width: 60px;
     height: 60px;
+    font-size: 25px;
+    font-weight: bold;
 }
