[2-7] javascript wordle 게임 만들기 - img에 포인트 커서 모양

--- a/WordleChallenge/CSS/header.css
+++ b/WordleChallenge/CSS/header.css
@@ -18,6 +18,7 @@
 }
 .menu-bar__menu img{
     width: 30px;
+    cursor: pointer;
 }
 .menu-bar__menu2 {
     width: 30px;
@@ -30,4 +31,5 @@
 .menu-bar__menu2 img{
     width: 30px;
     padding-left: 5px;
+    cursor: pointer;
 }
