[2-7] javascript wordle 게임 만들기 - timer 추가하기(1)

--- a/WordleChallenge/CSS/main.css
+++ b/WordleChallenge/CSS/main.css
@@ -6,6 +6,15 @@ main {
     padding-top: 20px;
     gap: 5px;
 }
+
+.timer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+    font-size: 25px;
+}
+
 .board-row {
     display: flex;
     justify-content: center;
