--- a/WordleChallenge/CSS/main.css
+++ b/WordleChallenge/CSS/main.css
@@ -42,3 +42,13 @@ main {
         transform: rotateX(0);
     }
 }
+
+@keyframes inputKeyBoard {
+    0% {
+        transform: scale(0);
+    } 50% {
+          transform: scale(0.5);
+      } 100% {
+            transform: scale(0);
+        }
+}
