--- a/mainAssignment/static/css/main.css
+++ b/mainAssignment/static/css/main.css
@@ -61,6 +61,7 @@ main {
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     cursor: pointer;
     transition: all 1s ease-in-out;
+    text-decoration: none;
 }
 .write-btn:hover {
     background-color: rgba(255,110,0, 0.8);
